<resources>
    <string name="app_name">1/4 Cup?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort_categories">Sort Categories</string>
    <string name="no_network">No Network Connection</string>
    <string name="sign_in_cancelled">Sign-in cancelled.</string>
...
    <string name="nav_recipes">Recipes</string>
    <string name="nav_settings">Settings</string>
    <string name="welcome_message">Welcome!</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_new_list">New List</string>
    <string name="list_name_hint">List Name</string>
    <string name="action_new_list_positive">Create New List</string>
    <string name="pref_manage_category_sort">Manage Category Sort Orders</string>
    <string name="pref_manage_category_sort_key">manage_category_sort</string>
    <string name="pref_category_sorting">Category Sorting</string>
    <string name="action_add_category">Add Category</string>
    <string name="description_delete_icon">Delete Icon</string>
    <string name="hint_category_name">Category Name</string>
...
