<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moufee.a14cup.MainActivity" >

    <EditText
        android:id="@+id/list_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name_hint"
        android:inputType="textCapWords"
        android:text=""/>

</LinearLayout>
